# JPResume

./: .gitignore  .swiftlint.yml  CLAUDE.md  Makefile  Mintfile  Package.resolved  Package.swift  README.md  project.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Scripts/: bump_version.py
Sources/DocPipeline/: AICache.swift  Artifact.swift  ArtifactStore.swift  ChatModelDecoder.swift  ConstraintViolation.swift  ExternalBridge.swift  GenerationResult.swift  JSONCoders.swift  ProviderFactory.swift  Severity.swift
Sources/JPResume/: JPResume.swift
Sources/JPResume/AI/: AICache.swift  AIProvider.swift  AnthropicProvider.swift  ChatModelDecoder.swift  CritiquePrompts.swift  GenerationResult.swift  ResumeAI.swift  (+9 more)
Tests/JPResumeTests/: ArtifactStoreTests.swift  CacheTests.swift  ConfigTests.swift  ConsistencyCheckerTests.swift  ExternalBridgeTests.swift  HTTPJSONClientTests.swift  JapaneseConstraintCheckerTests.swift  JapanesePolishTests.swift  NormalizerTests.swift  OrchestrationTests.swift  ParserTests.swift  PipelineTests.swift  RendererTests.swift  ResumeInputReaderTests.swift  StepwiseCommandTests.swift  UserNotesTests.swift  ValidatorTests.swift
docs/: cli.md  contributing.md
docs/plans/: stepwise-agent-mode.md
examples/: resume.md
skills/japanese-resume/: SKILL.md
src/jpresume/: __init__.py  __main__.py  ai.py  cli.py  config.py  constants.py  models.py  parser.py  pdf.py  pdf_rirekisho.py  render.py
swift/: .gitignore
tests/: conftest.py  test_config.py  test_models.py  test_parser.py  test_render.py
(+53 files in other folders)
